😍💟 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
             }
             .photo-gallery {
                 background: rgb(255, 254, 217);
+              margin-right:10px; 
+              margin-bottom: 10px;
+              border: 2px ridge purple
             }
             .photo {
                 width: 200px;
+              border-radius: 12px;
+            
             }
         </style>
     </head>
